# TCP-IP-Python-V4

./: .gitignore  README.md  README.zh.md  dobot_api.py  pyproject.toml  setup.cfg
assets/: DOBOT TCP_IP二次开发接口文档_V4.6.6_20260410_cn.md  SDK_API文档_完整版.md  error_controller_README.md
assets/手臂二开md文档/: 手臂二开md文档段落一.md  手臂二开md文档段落三.md  手臂二开md文档段落二.md  手臂二开md文档段落五.md  手臂二开md文档段落四.md
demo/: DobotDemo.py  README.md  __init__.py  main.py  main_UI.py  ui.py  z_Cnv_test.py  z_servo_test.py
dobot_sdk/: __init__.py  version.py
dobot_sdk/api/: __init__.py  communication.py  error_controller.py  io.py  motion.py  plugins.py  robot.py  robot_control.py
dobot_sdk/core/: __init__.py  connection.py  exceptions.py  logger.py
dobot_sdk/models/: __init__.py  error_info.py  status.py
dobot_sdk/protocol/: __init__.py  data_types.py  feedback.py
examples/: 00_logging_demo.py  01_basic_connection.py  02_motion_control.py  03_error_monitor.py  04_io_control.py  05_coordinate_system.py  06_force_and_conveyor.py  07_status_monitor.py  08_multi_thread_control.py  README.md
tests/: run_all_tests.py  test.py  test_basic.py  test_communication.py  test_io.py  test_motion.py  test_plugins.py  test_robot_control.py
