[metadata]
name = dobot_sdk
version = 2.0.0
author = DOBOT
author_email = support@dobot.cn
description = DOBOT TCP/IP Python SDK V4 - 机器人控制SDK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dobot-cn/TCP-IP-Python-V4-main/tree/feature/v4-optimization
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.19.0
    requests>=2.25.0
include_package_data = True

[options.package_data]
dobot_sdk =

[options.packages.find]
where = .
include = dobot_sdk*
exclude =
    tests*
    examples*

[options.extras_require]
dev =
    pytest>=6.0
    pytest-cov>=2.0

[flake8]
max-line-length = 120
exclude = .git,__pycache__,build,dist,.eggs,*.egg-info
ignore = E203,W503

[isort]
profile = black
line_length = 120
skip_gitignore = true
